syntax = "proto3";
package ru.csc.bdse.app.v1.proto;

message RecordV1 {
    string first_name = 1;
    string last_name = 2;
    string phone = 3;
}